fix select style error #56 单选显示添加text-overflow:eclipse

--- a/src/components/select/select.less
+++ b/src/components/select/select.less
@@ -59,6 +59,8 @@
   height: auto;
   padding-left: 4px;
   min-height: 30px;
+  padding-right: 26px;
+  text-overflow: ellipsis;
   &::-webkit-input-placeholder { /* WebKit browsers */
     color:@f-color-light;
   }
